crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__cross_package_imports.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: missing field `v1`
  ┌─ /Users/jtoft/src/ai/amalgam/test_snapshot_temp_80558_3.ncl:8:17
  │
8 │   composition = crossplane.apiextensions_crossplane_io.v1.Composition & {
  │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this requires the field `v1` to exist
  │
  ┌─ /Users/jtoft/src/ai/amalgam/examples/pkgs/crossplane/apiextensions.crossplane.io/mod.ncl:4:1
  │  
4 │ ╭ {
5 │ │   crossplane = import "./crossplane/mod.ncl",
6 │ │ }
  │ ╰─' this record lacks the field `v1`


STDOUT:
