crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__generated_test_type.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: type_content
---
# Module: example.com.v1

{
  spec
     | {
    image
       | String
       | optional,
    replicas
       | Number
       | optional
  }
     | optional,
  status
     | {
    ready
       | Bool
       | optional
  }
     | optional
}
