crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__k8s_empty_objects.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: snapshot_content
---
SUCCESS: true

OUTPUT:
{ test_result = "Testing core v1 module import", }
