crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__package_structure.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: import of examples/pkgs/k8s_io/api/storage/v1.ncl failed: could not find import (looked in [/Users/jtoft/src/ai/amalgam])
  ┌─ /Users/jtoft/src/ai/amalgam/test_snapshot_temp_XXXX_X.ncl:3:10
  │
3 │ let v1 = import "examples/pkgs/k8s_io/api/storage/v1.ncl" in
  │          ------------------------------------------------ imported here


STDOUT:
